force-app/main/default/objects/Tipo_de_Tanque__c/Tipo_de_Tanque__c.object-meta.xml
<CustomObject>
    <label>Tipo de Tanque</label>
    <nameField>
        <displayFormat>TT-{0000}</displayFormat>
        <label>Tipo de Tanque Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tipos de Tanque</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>