force-app/main/default/objects/Tipo_de_Tanque__c/fields/Capacidad_Minima__c.field-meta.xml
<CustomField>
    <fullName>Capacidad_Minima__c</fullName>
    <inlineHelpText>Capacidad mínima (en litros o m³) para este tipo de tanque.</inlineHelpText>
    <label>Capacidad Mínima</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>