force-app/main/default/objects/Tipo_de_Tanque__c/fields/Descripcion__c.field-meta.xml
<CustomField>
    <fullName>Descripcion__c</fullName>
    <inlineHelpText>Descripción general del tipo de tanque.</inlineHelpText>
    <label>Descripción</label>
    <type>TextArea</type>
</CustomField>