force-app/main/default/objects/Tipo_de_Tanque__c/fields/Marca__c.field-meta.xml
<CustomField>
    <fullName>Marca__c</fullName>
    <label>Marca</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MarcaA</fullName>
            </value>
            <value>
                <fullName>MarcaB</fullName>
            </value>
            <value>
                <fullName>MarcaC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>