force-app/main/default/objects/Tipo_de_Tanque__c/fields/Nombre_Tipo__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Tipo__c</fullName>
    <inlineHelpText>Nombre descriptivo del tipo de tanque (ej. &apos;Tanque Estándar 5000L&apos;).</inlineHelpText>
    <label>Nombre Tipo</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>