force-app/main/default/objects/Tipo_de_Tanque__c/fields/Precio_Base__c.field-meta.xml
<CustomField>
    <fullName>Precio_Base__c</fullName>
    <inlineHelpText>Precio base de referencia para los tanques de este tipo.</inlineHelpText>
    <label>Precio Base</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>